// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  username  String   @unique
  email     String?  @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  soundButtons    SoundButton[]
  soundboardGrids SoundboardGrid[]

  @@map("users")
}

model SoundButton {
  id       String  @id @default(cuid())
  userId   String  @map("user_id")
  name     String
  filePath String  @map("file_path")
  duration Float?
  volume   Float   @default(1.0)
  pitch    Float   @default(1.0)
  createdAt DateTime @default(now()) @map("created_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sound_buttons")
}

model SoundboardGrid {
  id           String   @id @default(cuid())
  userId       String   @map("user_id")
  name         String
  layoutConfig String?  @map("layout_config") // JSON configuration
  createdAt    DateTime @default(now()) @map("created_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("soundboard_grids")
}

model AudioFile {
  id        String   @id @default(cuid())
  filename  String
  filePath  String   @map("file_path")
  fileSize  Int?     @map("file_size")
  duration  Float?
  format    String?
  createdAt DateTime @default(now()) @map("created_at")

  @@map("audio_files")
}